logo and menu bar problem and side gap fixed

--- a/public/frontend/assets/css/app.css
+++ b/public/frontend/assets/css/app.css
@@ -816,13 +816,13 @@ input {
 .breadcrumb-banner .section-heading .title {
     color: #000248;
     width: 55%;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 @media only screen and (max-width: 991px) {
     .breadcrumb-banner .section-heading .title {
         width: 100%;
-        margin-bottom: 30px;
+        margin-bottom: 15px;
     }
 }
 
@@ -1202,12 +1202,12 @@ Pagination
 
 .section-heading {
     text-align: center;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
 }
 
 @media only screen and (max-width: 991px) {
     .section-heading {
-        margin-bottom: 50px;
+        margin-bottom: 30px;
     }
 }
 
@@ -1239,7 +1239,7 @@ Pagination
 
 @media only screen and (max-width: 991px) {
     .section-heading .title {
-        font-size: 50px;
+        font-size: 46px;
     }
 }
 
@@ -1251,7 +1251,7 @@ Pagination
 
 @media only screen and (max-width: 479px) {
     .section-heading .title {
-        font-size: 34px;
+        font-size: 26px;
     }
 }
 
@@ -1275,12 +1275,12 @@ Pagination
 .heading-light-left .title {
     color: var(--color-white);
     margin-bottom: 10px;
-    width: 60%;
+    width: 100%;
 }
 
 @media only screen and (max-width: 1199px) {
     .heading-light-left .title {
-        width: 70%;
+        width: 100%;
     }
 }
 
@@ -2572,7 +2572,7 @@ Pagination
 
 @media only screen and (max-width: 767px) {
     .contact-form-box {
-        padding: 40px 30px;
+        padding: 15px 15px;
     }
 }
 
@@ -4649,6 +4649,11 @@ Pagination
     border-radius: 30px 30px 0 0;
     position: relative;
 }
+.project-grid .thumbnail video {
+    border-radius: 30px 30px 0px 0px;
+    width: 100%;
+}
+
 .project-grid .thumbnail1 {
     overflow: hidden;
     border-radius: 10px 10px 10px 10px;
@@ -4883,25 +4888,38 @@ Pagination
 }
 
 .isotope-project-btn {
-    margin-bottom: 55px;
+    margin-bottom: 25px;
 }
 
 .isotope-project-btn button {
     border: none;
     background-color: transparent;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 500;
     color: var(--color-body);
     font-family: var(--font-primary);
-    margin-right: 100px;
+    margin-right: 60px;
     padding: 8px 0;
     position: relative;
+}
+@media only screen and (max-width: 1199px) {
+    .isotope-project-btn button {
+        margin-right: 12px;
+        font-size: 14px;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .isotope-project-btn button {
+        margin-right: 10px;
+        font-size: 14px;
+    }
 }
 
 @media only screen and (max-width: 575px) {
     .isotope-project-btn button {
-        margin-right: 50px;
-        font-size: 18px;
+        margin-right: 20px;
+        font-size: 14px;
     }
 }
 
@@ -4954,11 +4972,11 @@ Pagination
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    padding: 50px 50px 40px;
+    padding: 20px 20px 10px;
     border-radius: 30px;
     -webkit-transition: var(--transition);
     transition: var(--transition);
-    margin-bottom: 40px;
+    margin-bottom: 10px;
     position: relative;
     z-index: 1;
     transition: var(--transition);
@@ -4966,19 +4984,19 @@ Pagination
 
 @media only screen and (min-width: 1200px) and (max-width: 1599px) {
     .services-grid {
-        padding: 50px 30px 40px;
+        padding: 20px 15px;
     }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
     .services-grid {
-        padding: 40px 15px;
+        padding: 20px 15px;
     }
 }
 
 @media only screen and (max-width: 991px) {
     .services-grid {
-        padding: 40px 25px;
+        padding: 10px 10px;
     }
 }
 
@@ -6722,7 +6740,7 @@ Pagination
 
 @media only screen and (max-width: 991px) {
     .axil-header .header-navbar .header-logo img {
-        width: 150px;
+        width: 100%;
     }
 }
 
@@ -6902,20 +6920,20 @@ Pagination
 }
 
 .axil-mainmenu {
-    padding: 20px 0px 20px 0px;
+    padding: 10px 0px 0px 0px;
     -webkit-transition: var(--transition);
     transition: var(--transition);
 }
 
 @media only screen and (min-width: 1200px) and (max-width: 1599px) {
     .axil-mainmenu {
-        padding: 35px 0;
+        padding: 10px 0px 0px 0px;
     }
 }
 
 @media only screen and (max-width: 1199px) {
     .axil-mainmenu {
-        /*padding: 30px 0;*/
+        padding: 10px 0px 0px 0px;
     }
 }
 
@@ -6927,7 +6945,7 @@ Pagination
     z-index: 5;
     background-color: var(--color-white);
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
-    padding: 15px 0;
+    padding: 10px 0px 0px 0px;
     -webkit-animation: headerSlideDown .8s ease forwards;
     animation: headerSlideDown .8s ease forwards;
 }
@@ -7216,8 +7234,8 @@ Pagination
 }
 
 .header-action .sidemenu-btn .btn-wrap {
-    height: 60px;
-    width: 60px;
+    height: 40px;
+    width: 40px;
     background-color: var(--color-light);
     border: none;
     border-radius: 50%;
@@ -7244,8 +7262,8 @@ Pagination
 
 @media only screen and (max-width: 991px) {
     .header-action .sidemenu-btn .btn-wrap {
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
     }
 }
 
@@ -10052,14 +10070,14 @@ Pagination
 @media only screen and (max-width: 991px) {
     .section-padding-equal {
         padding: 80px 0;
-        margin-top: 100px;
+        margin-top: 0px;
     }
 }
 
 @media only screen and (max-width: 767px) {
     .section-padding-equal {
         padding: 30px 0;
-        margin-top: 15px;
+        margin-top: 1px;
     }
 }
 
@@ -10076,21 +10094,21 @@ Pagination
 @media only screen and (max-width: 1599px) {
     .section-padding-equal-banner {
         padding: 35px 0;
-        margin-top: 60px;
+        margin-top: 160px;
     }
 }
 
 @media only screen and (max-width: 991px) {
     .section-padding-equal-banner {
-        padding: 80px 0;
-        margin-top: 100px;
+        padding: 30px 0;
+        margin-top: 102px;
     }
 }
 
 @media only screen and (max-width: 767px) {
     .section-padding-equal-banner {
         padding: 30px 0;
-        margin-top: 15px;
+        margin-top: 10px;
     }
 }
 
